--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,13 +6,14 @@ site_description: 郑至恒的个人网站
 
 # [Navigtion]
 nav:
-  - 讲稿:
-   
+  - 数学:
+    - 微积分:
+      - calculus/index.md
+    - 线性代数:
+      - linear_algebra/index.md
   - 博客:
     
   - 开发:
-   
-  - 我:
    
 
 # [UI]
